syntax = "proto3";

package common;

message SimpleResponse {
    bool is_success = 1;
}

message Empty {}

message Hash {
    bytes hash = 1;
}

message Address {
    bytes address = 1;
}

message Proposal {
    uint64 height = 1;
    bytes data = 2;
}

message ProposalWithProof {
    Proposal proposal = 1;
    bytes proof = 2;
}

message BFTProposal {
    bytes block_hash = 1;
    bytes pre_state_root = 2;
    bytes pre_proof = 3;
}

message ProposalEnum {
    oneof proposal {
        BFTProposal bft_proposal = 1;
    }
}
