syntax = "proto3";

import "common.proto";

package consensus;

message ConsensusConfiguration {
    uint32 block_interval = 1;
    repeated bytes validators = 2;
}

service ConsensusService {
    rpc Reconfigure(ConsensusConfiguration) returns (common.SimpleResponse);
    rpc CheckBlock(common.ProposalWithProof) returns (common.SimpleResponse);
}
