// Copyright Rivtower Technologies LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package evm;

import "common.proto";
import "blockchain.proto";
import "executor.proto";

message Receipt {
  bytes transaction_hash = 1;
  uint64 transaction_index = 2;
  bytes block_hash = 3;
  uint64 block_number = 4;
  bytes cumulative_quota_used = 5;
  bytes quota_used = 6;
  bytes contract_address = 7;
  repeated Log logs = 8;
  bytes state_root = 9;
  bytes logs_bloom = 10;
  string error_message = 11;
}

message Log {
  bytes address = 1;
  repeated bytes topics = 2;
  bytes data = 3;
  bytes block_hash = 4;
  uint64 block_number = 5;
  bytes transaction_hash = 6;
  uint64 transaction_index = 7;
  uint64 log_index = 8;
  uint64 transaction_log_index = 9;
}

message ByteCode {
  bytes byte_code = 1;
}

message Balance {
  bytes value = 1;
}

message Nonce {
  bytes nonce = 1;
}

message ByteAbi {
  bytes bytes_abi = 1;
}

message ByteQuota {
  bytes bytes_quota = 1;
}

message ReceiptProof {
  bytes receipt = 1;
  bytes receipt_proof = 2;
  RootsInfo roots_info = 3;
}

message RootsInfo {
  uint64 height = 1;
  bytes state_root = 2;
  bytes receipt_root = 3;
}

message BlockNumber {
  oneof lable {
    uint64 height = 1;
    string tag = 2;
    bytes hash = 3;
  }
}

message GetCodeRequest {
  common.Address address = 1;
  BlockNumber block_number = 2;
}

message GetBalanceRequest {
  common.Address address = 1;
  BlockNumber block_number = 2;
}

message GetTransactionCountRequest {
  common.Address address = 1;
  BlockNumber block_number = 2;
}

message GetAbiRequest {
  common.Address address = 1;
  BlockNumber block_number = 2;
}

message GetStorageAtRequest {
  common.Address address = 1;
  common.Hash position = 2;
  BlockNumber block_number = 3;
}

service RPCService {
  rpc GetTransactionReceipt(common.Hash) returns (Receipt);

  rpc GetCode(GetCodeRequest) returns (ByteCode);

  rpc GetBalance(GetBalanceRequest) returns (Balance);

  rpc GetTransactionCount(GetTransactionCountRequest) returns (Nonce);

  rpc GetAbi(GetAbiRequest) returns (ByteAbi);

  rpc EstimateQuota(executor.CallRequest) returns (ByteQuota);

  rpc GetReceiptProof(common.Hash) returns (ReceiptProof);

  rpc GetRootsInfo(BlockNumber) returns (RootsInfo);

  rpc GetStorageAt(GetStorageAtRequest) returns (common.Hash);
}
